Added Vector2 header and class files

--- a/engine/engine/engine.vcxproj
+++ b/engine/engine/engine.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="physicalObject.h" />
+    <ClInclude Include="vector2.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="engine.cpp" />
