--- a/engine/engine/engine.vcxproj.filters
+++ b/engine/engine/engine.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="physicalObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="vector2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
