--- a/engine/engine/engine.vcxproj.filters
+++ b/engine/engine/engine.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="physicalObject.cpp" />
     <ClCompile Include="rectangle.cpp" />
+    <ClCompile Include="vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="circle.h" />
