--- a/engine/engine/engine.vcxproj.filters
+++ b/engine/engine/engine.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="vector2.cpp" />
     <ClCompile Include="polygon.cpp" />
     <ClCompile Include="force.cpp" />
+    <ClCompile Include="aabbHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="circle.h" />
@@ -18,5 +19,6 @@
     <ClInclude Include="rectangle.h" />
     <ClInclude Include="polygon.h" />
     <ClInclude Include="force.h" />
+    <ClInclude Include="aabbHandler.h" />
   </ItemGroup>
 </Project>
